phone number added and navbar spacing corrected and responsive

--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -94,7 +94,7 @@
     font-size: 16px;
   }
   .banner-content img {
-    height: 150px;
+    height: 125px;
   }
 }
 
